--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -13,6 +13,12 @@
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
+	<!-- MY OWN CSS -->
+    <link href="assets/css/custom.css" rel="stylesheet">
+
+    <!-- GOOGLE FONTS -->
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -21,7 +27,31 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    
+
+
+<!-- Fixed navbar -->
+<nav>
+<div class="container">
+	<div class="navbar-center">
+
+		<div class="navbar-custom">
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li>Restaurant</li>
+				<li>Menu</li>
+				<li><img src="assets/img/logo.svg" class="logo-img"></li>
+				<li>Drinks</li>
+				<li>Reservations</li>
+				<li>Contact</li>
+			</ul>
+		</div>
+
+	</div>
+</div>
+</nav>
+
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
