--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -36,14 +36,15 @@
 	<div class="navbar-center">
 
 		<div class="navbar-custom">
+		<a href="#"><img src="assets/img/logo.svg" class="logo-img logo-img-med"></a>
 			<ul>
 				<li><a href="#">Home</a></li>
-				<li>Restaurant</li>
-				<li>Menu</li>
-				<li><img src="assets/img/logo.svg" class="logo-img"></li>
-				<li>Drinks</li>
-				<li>Reservations</li>
-				<li>Contact</li>
+				<li><a href="#">Restaurant</a></li>
+				<li><a href="#">Menu</a></li>
+				<li class="logo-li"><a href="#"><img src="assets/img/logo.svg" class="logo-img logo-img-lrg"></a></li>
+				<li><a href="#">Drinks</a></li>
+				<li><a href="#">Reservations</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>
 		</div>
 
