--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -8,12 +8,12 @@
     <title>Sweet Tooth Sweets</title>
 
     <!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+  	<!-- Optional theme -->
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
-	<!-- MY OWN CSS -->
+  	<!-- MY OWN CSS -->
     <link href="assets/css/custom.css" rel="stylesheet">
 
     <!-- GOOGLE FONTS -->
@@ -32,24 +32,24 @@
 
 <!-- Fixed navbar -->
 <nav>
-<div class="container">
-	<div class="navbar-center">
+  <div class="container">
+  	<div class="navbar-center">
 
-		<div class="navbar-custom">
-		<a href="#"><img src="assets/img/logo.svg" class="logo-img logo-img-med"></a>
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Restaurant</a></li>
-				<li><a href="#">Menu</a></li>
-				<li class="logo-li"><a href="#"><img src="assets/img/logo.svg" class="logo-img logo-img-lrg"></a></li>
-				<li><a href="#">Drinks</a></li>
-				<li><a href="#">Reservations</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</div>
+  		<div class="navbar-custom">
+    		<a href="#"><img src="assets/img/logo.svg" class="logo-img logo-img-med"></a>
+  			<ul>
+  				<li class="menu-link"><a href="#">Home</a></li>
+  				<li class="menu-link"><a href="#">Restaurant</a></li>
+  				<li class="menu-link"><a href="#">Menu</a></li>
+  				<li class="logo-li"><a href="#"><img src="assets/img/logo.svg" class="logo-img logo-img-lrg"></a></li>
+  				<li class="menu-link"><a href="#">Drinks</a></li>
+  				<li class="menu-link"><a href="#">Reservations</a></li>
+  				<li class="menu-link"><a href="#">Contact</a></li>
+  			</ul>
+  		</div>
 
-	</div>
-</div>
+  	</div>
+  </div>
 </nav>
 
 
