--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -54,15 +54,26 @@
 
 
 
+<!-- OPEN/CLOSE BUTTON -->
+<div class="menu-button">
+	<span class="top"></span>
+	<span class="middle"></span>
+	<span class="bottom"></span>
+</div>
+
+
+
 <!-- OVERLAY DIV -->
 <div class="container">
 	<div class="overlay">
-		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Work</a></li>
-			<li><a href="#">Contact</a></li>
-		</ul>
+		<div class="overlay-menu">
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Work</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+		</div>
 	</div>
 </div>
 
@@ -72,5 +83,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<!-- CUSTOM JAVASCRIPT -->
+	<script src="assets/js/hamburger-toggle.js"></script>
+
   </body>
 </html>
