--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -63,6 +63,13 @@
 
 
 
+<!-- SMALL LOGO -->
+<div class="container logo-sml-container">
+	<img src="assets/img/logo-sml.svg" class="logo-sml">
+</div>
+
+
+
 <!-- OVERLAY DIV -->
 <div class="container">
 	<div class="overlay">
