--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -29,69 +29,93 @@
   <body>
     
 
+<!-- THE HERO SECTION WITH NAVIGATION -->
+<header>
 
-<!-- FIXED NAVBAR -->
-<nav>
-  <div class="container">
-  	<div class="navbar-center">
+  <!-- THE NAVIGATION -->
+  <nav>
 
-  		<div class="navbar-custom">
-    		<a href="#"><img src="assets/img/logo.svg" class="logo-img logo-img-med"></a>
-  			<ul>
-  				<li class="menu-link"><a href="#">Home</a></li>
-  				<li class="menu-link"><a href="#">Restaurant</a></li>
-  				<li class="menu-link"><a href="#">Menu</a></li>
-  				<li class="logo-li"><a href="#"><img src="assets/img/logo.svg" class="logo-img logo-img-lrg"></a></li>
-  				<li class="menu-link"><a href="#">Drinks</a></li>
-  				<li class="menu-link"><a href="#">Reservations</a></li>
-  				<li class="menu-link"><a href="#">Contact</a></li>
-  			</ul>
-  		</div>
+      <!-- DESKTOP NAVBAR -->
+      <div class="container">
+      	<div class="navbar-center">
 
-  	</div>
-  </div>
-</nav>
+      		<div class="navbar-custom">
+        		<a href="#"><img src="assets/img/logo.svg" class="logo-img logo-img-med"></a>
+      			<ul>
+      				<li class="menu-link"><a href="#">Home</a></li>
+      				<li class="menu-link"><a href="#">Restaurant</a></li>
+      				<li class="menu-link"><a href="#">Menu</a></li>
+      				<li class="logo-li"><a href="#"><img src="assets/img/logo.svg" class="logo-img logo-img-lrg"></a></li>
+      				<li class="menu-link"><a href="#">Drinks</a></li>
+      				<li class="menu-link"><a href="#">Reservations</a></li>
+      				<li class="menu-link"><a href="#">Contact</a></li>
+      			</ul>
+      		</div><!-- navbar-custom -->
 
-
-
-<!-- OPEN/CLOSE BUTTON -->
-<div class="menu-button">
-	<span class="top"></span>
-	<span class="middle"></span>
-	<span class="bottom"></span>
-</div>
+      	</div><!-- navbar-center -->
+      </div><!-- container -->
 
 
 
-<!-- SMALL LOGO -->
-<div class="container logo-sml-container">
-	<img src="assets/img/logo-sml.svg" class="logo-sml">
-</div>
+      <!-- MOBILE NAVIGATION -->
+      <!-- OPEN/CLOSE BUTTON -->
+      <div class="menu-button">
+      	<span class="top"></span>
+      	<span class="middle"></span>
+      	<span class="bottom"></span>
+      </div>
+
+      <!-- SMALL LOGO -->
+      <div class="container logo-sml-container">
+      	<img src="assets/img/logo-sml.svg" class="logo-sml">
+      </div>
+
+      <!-- OVERLAY DIV -->
+      <div class="container">
+      	<div class="overlay">
+      		<div class="overlay-menu">
+      			<ul>
+      				<li><a href="#">Home</a></li>
+      				<li><a href="#">About</a></li>
+      				<li><a href="#">Work</a></li>
+      				<li><a href="#">Contact</a></li>
+      			</ul>
+      		</div><!-- overlay-menu -->
+      	</div><!-- overlay -->
+      </div><!-- container -->
+
+  </nav><!-- nav -->
 
 
 
-<!-- OVERLAY DIV -->
-<div class="container">
-	<div class="overlay">
-		<div class="overlay-menu">
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Work</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</div>
-	</div>
-</div>
+  <!-- HERO SECTION -->
+  <section id="hero">
+    <article>
+      <div class="container center">
+        <div class="row">
+          <div class="col-sm-12">
+            <h1>Modern Australian Baking</h1>
+          </div>
+        </div>
+      </div>
+    </article>
+  </section>
+
+</header><!-- header -->
 
 
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-	<!-- CUSTOM JAVASCRIPT -->
-	<script src="assets/js/hamburger-toggle.js"></script>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+  <!-- CUSTOM JAVASCRIPT -->
+  <script src="assets/js/hamburger-toggle.js"></script>
+  <script src="assets/js/windowHeight.js"></script>
+
+
 
   </body>
 </html>
