--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -91,17 +91,32 @@
   <!-- HERO SECTION -->
   <section id="hero">
     <article>
-      <div class="container center">
-        <div class="row">
-          <div class="col-sm-12">
+
+        <div class="container center">
+
+          <div class="hero-div">
             <h1>Modern Australian Baking</h1>
           </div>
+
         </div>
-      </div>
+
     </article>
   </section>
 
 </header><!-- header -->
+
+<p>yo</p>
+<p>yo</p>
+<p>yo</p>
+<p>yo</p>
+<p>yo</p>
+
+<div class="test-container">
+    <div class="test">
+      yo
+    </div>
+  </div>
+
 
 
 
@@ -113,7 +128,7 @@
 
   <!-- CUSTOM JAVASCRIPT -->
   <script src="assets/js/hamburger-toggle.js"></script>
-  <script src="assets/js/windowHeight.js"></script>
+  <!-- <script src="assets/js/windowHeight.js"></script> -->
 
 
 
