caketown (experimenting with flexbox)

--- a/HTML/caketown01.html
+++ b/HTML/caketown01.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div class="parent">
+<div class="parent hidden">
 	<div class="child menu">
 		<ul class="flex-container">
 			<li class="flex-item logo">1</li>
@@ -19,6 +19,14 @@
 	</div>
 	<div class="child message">Cakes and Treats</div>
 </div>
+<div class="parent">
+	<div class="navbar">
+		<div class="logo">logo</div>
+		<div class="navlinks">home contact links</div>
+	</div>
+	<div class="splash">splash</div>
+</div>
+<div class="parent">more stuff here</div>
 
 </body>
 </html>
