--- a/HTML/caketown01.html
+++ b/HTML/caketown01.html
@@ -19,10 +19,19 @@
 	</div>
 	<div class="child message">Cakes and Treats</div>
 </div>
+
+
 <div class="parent">
 	<div class="navbar">
 		<div class="logo">logo</div>
-		<div class="navlinks">home contact links</div>
+		<div class="navlinks">
+			<ul>
+				<li>home</li>
+				<li>contact</li>
+				<li>links</li>
+				<li>about us</li>
+			</ul>
+		</div>
 	</div>
 	<div class="splash">splash</div>
 </div>
